# codelens

./: .gitignore  README.md  deploy.sh  docker-compose.yml
.github/workflows/: ci.yml  deploy.sh
backend/: .env.example  Dockerfile  conftest.py  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py  worker.py
backend/app/middleware/: analytics.py  rate_limit.py
backend/app/models/: analytics.py  feedback.py  review.py  user.py
backend/app/routers/: analytics.py  auth.py  feedback.py  review.py  tasks.py
backend/app/schemas/: analytics.py  feedback.py  review.py  user.py
backend/app/services/: auth.py  cache.py  llm.py  sanitizer.py  verification.py
backend/app/tasks/: review.py
backend/scripts/: load_test.py
backend/tests/: conftest.py  test_review.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CodeEditor.jsx  Navbar.jsx  ReviewResults.jsx  TextResults.jsx
frontend/src/pages/: Analyze.jsx  History.jsx  Home.jsx  Login.jsx  Register.jsx
frontend/src/utils/: AuthContext.jsx  api.js
